Alterações e correções - gnosticismo

--- a/gnosticismo.html
+++ b/gnosticismo.html
@@ -14,92 +14,149 @@
         <div id="quadro1">
             <img id="perfil" src="\imagens\perfil-larissa.jpg">
             <div id="texto-perfil">
-                <h4>GNOSTICISMO (gnóstico)</h4>Este pensamento filosófico está
-                presente desde o começo da civilização humana, e é expressamente encontrado
-                em muitas
+                <h4>GNOSTICISMO (gnóstico)</h4>
+                <hr>
+                Embora muitos atribuam o surgimento do gnosticismo aos primeiros
+                séculos desta era, na verdade, o gnosticismo é um pensamento filosófico
+                que está presente desde o começo da civilização humana, e é expressamente
+                encontrado em muitas
                 <div class="tooltip">
-                    <h3>religiões de mistérios</h3>.
+                    <h3>religiões de mistérios</h3>
                     <span class="tooltip1">É uma forma de religião com um corpo de
                         conhecimento secreto. Nela, há um conjunto central de crenças e
-                        práticas de natureza religiosa com seus segredos, que são reveladas
-                        apenas aos iniciados.
+                        práticas de natureza religiosa com seus segredos, que são
+                        reveladas apenas aos iniciados.
                     </span>
                 </div>
+                antiquíssimas.
                 Para um gnóstico, a única forma de se chegar a verdade universal é
-                pelo conhecimento, referindo-se ao conhecimento humano como um todo.
-                Dentro de nós encontra-se toda capacitação que precisamos para acessar,
-                de modo pleno, todo conhecimento que necessitamos, estando porém em estado
+                pelo conhecimento, referindo-se ao conhecimento humano como um todo,
+                que se encontra dentro de nós. Ainda que esteja, porém, em estado
                 <div class="tooltip">
                     <h3>embrionário</h3>
-                    <span class="tooltip2">Em sentido figurado diz respeito àquilo que ainda
-                        não se encontra completamente desenvolvido; que ainda não nasceu na
-                        esfera física existindo apenas no campo das ideias.
+                    <span class="tooltip2">Em sentido figurado diz respeito àquilo que
+                        ainda não se encontra completamente desenvolvido; que ainda não
+                        nasceu na esfera física existindo apenas no campo das ideias.
                     </span>,
-                </div> basta apenas preparar-se para trazê-lo à tona.
+                </div>
+                bastando apenas preparar-se para trazê-lo à tona.
             </div>
         </div>
         <div id="quadro2">
-            <div class="tooltip">
-                <h3>Aristóteles</h3>
-                <span class="tooltip3">Foi um filósofo grego na Grécia antiga, fundador da
-                    Escola Peripatética e do Liceu, além de ter sido aluno de Platão e
-                    professor de Alexandre, o Grande. Seus escritos abrangem diversos
-                    assuntos como: a física, a metafísica, as leis da poesia e do drama,
-                    a música, a lógica, a retórica, o governo, a ética, a biologia, a linguística,
-                    a economia e a zoologia. Juntamente com Platão e Sócrates (professor de Platão),
-                    Aristóteles é visto como um dos fundadores da filosofia ocidental.
-                </span>
+            <img id="imgQ2" src="\imagens\carl-jung.png">
+            <div id="caixa-quadro2">
+                <div class="tooltip">
+                    <h3>Carl Gustav Jung</h3>,
+                    <span class="tooltip4">Foi um psiquiatra e psicoterapeuta suíço que
+                        fundou a psicologia analítica. Ele criou alguns dos mais
+                        conhecidos conceitos psicológicos, incluindo o arquétipo, o
+                        inconsciente coletivo, o complexo, e a sincronicidade.
+                    </span>
+                </div>
+                eminente psicanalista e admirador do gnosticismo, ensinava que dentro
+                do ser humano estão os próprios
+                <div class="tooltip">
+                    <h3>arquétipos</h3>
+                    <span class="tooltip5">Modelo pelo qual se faz uma obra material ou
+                        intelectual. Para o platonismo, as ideias são os projetos das
+                        coisas, certas ideias são os arquétipos de outras ideias.
+                    </span>
+                </div>
+                da criação, ou seja, as fórmulas ou princípios que estão na raiz de
+                todas as coisas. Ele usou o gnosticismo como uma fonte de inspiração
+                para suas próprias ideias sobre psicologia e espiritualidade. Ele
+                acreditava que os mitos e símbolos gnósticos podiam enriquecer nossa
+                compreensão do inconsciente e dos processos individuais do
+                desenvolvimento psicológico. O gnosticismo, com Jung, passou a ser
+                um assunto que interessava, não apenas à história da religião, mas
+                também à psicologia. Jung pagou caro por essas opiniões a respeito do
+                gnosticismo. Até hoje existe quem carimbe o trabalho de Jung de “não
+                científico” em razão das suas opiniões a respeito dessa matéria, pois
+                segundo os cristãos ortodoxos, o gnosticismo não era coisa séria. 
             </div>
-            dizia isso, ou seja, que toda a sabedoria do universo já está dentro do homem,
-            só é preciso aprender a acessá-la.
-            <div class="tooltip">
-                <h3>Carl Gustav Jung</h3>
-                <span class="tooltip4">Foi um psiquiatra e psicoterapeuta suíço que fundou a
-                    psicologia analítica. Ele criou alguns dos mais conhecidos conceitos psicológicos,
-                    incluindo o arquétipo, o inconsciente coletivo, o complexo, e a sincronicidade.
-                </span>,
-            </div>
-            eminente psicanalista e admirador do gnosticismo, ensinava que dentro do ser humano
-            estão os próprios
-            <div class="tooltip">
-                <h3>arquétipos</h3>
-                <span class="tooltip5">Modelo pelo qual se faz uma obra material ou intelectual.
-                    Para o platonismo, as ideias são os projetos das coisas, certas ideias são
-                    os arquétipos de outras ideias.
-                </span>
-            </div>
-            da criação, ou seja, as fórmulas ou princípios que estão na raiz de todas
-            as coisas. O gnóstico crê que a matéria (o corpo) é mau e que o espírito é bom.<br><br>
-            Gosto do gnosticismo principalmente por sua ênfase no potencial humano, isso tem
-            um efeito motivador ao mesmo tempo que nos adverte de nossa responsabilidade e das
-            consequências da preguiça ou indiferença quanto a conhecer a vida, que é a única
-            maneira de realmente aproveitá-la.
-            Ser um
-            <div class="tooltip">
-                <h3>filósofo</h3>
-                <span class="tooltip6">Pessoa que analisa a realidade na qual está inserida,
-                    e desenvolve uma reflexão buscando entender a natureza, a condição das pessoas,
-                    e a maneira de pensar a vida.
-                </span>
-            </div> é exatamente o coração do gnosticismo: ser um amante da sabedoria.
         </div>
         <div id="quadro3">
+            <div id="caixa-quadro3A">
+                <div class="tooltip">
+                    <h3>Ralph Waldo Emerson</h3>,
+                    <span class="tooltip4">(1803 - 1882) foi um famoso escritor, filósofo
+                        e poeta norte-americano, que desenvolveu uma filosofia
+                        "transcendentalista", que consistia num método para se chegar ao
+                        "eu" profundo, o espírito universal comum a toda a espécie humana.
+                    </span>
+                </div>
+                explorou extensivamente o tema da sabedoria interior e
+                da conexão entre o indivíduo e o universo em seus ensaios e discursos.
+                Ele acreditava que cada pessoa possui uma fonte de sabedoria interna e que
+                essa sabedoria pode ser acessada por meio da introspecção, da autoconfiança
+                e da conexão com a natureza. Aqui está uma de suas citações e ideias
+                relacionadas ao tema:
+            </div>
+            <div id="caixa-quadro3B">
+                "A sabedoria brota da compreensão de que o universo é uma extensão de
+                si mesmo e que, ao compreender a si mesmo, você compreende o universo."
+            </div>
+            <div id="caixa-quadro3C">
+                Essas citações refletem a ênfase de Emerson na importância da autoconfiança,
+                da intuição e da compreensão do eu como um caminho para acessar a sabedoria
+                universal. Ele encorajava as pessoas a olharem para dentro de si mesmas em
+                busca de orientação e significado, e acreditava que essa busca levaria a
+                uma compreensão mais profunda do mundo ao nosso redor.
+            </div>
+            <img id="imgQ3" src="\imagens\ralph-waldo-emerson.png">
+        </div>
+        <div id="quadro4">
+            <div id="caixa-quadro4">
+                Para o gnóstico não há questão proibida, tema tabu ou dogma, menos ainda a verdade revelada através
+                de
+                profetas ou oráculos. Assim, uma característica da gnose religiosa é a eliminação do intermediário
+                autorizado (padre, ministro, pastor…) e a tentativa da experiência direta e, portanto, mística, de
+                Deus.
+                O pressuposto é o da imanência de Deus, habitando na alma humana, sendo dela o mais importante
+                parceiro.
+                Na verdade o gnóstico já não é mais o buscador, aquele que está à procura das respostas: Ele já tem
+                as
+                respostas. Cristo disse: “Conhecei a verdade e Ela vos libertará!” Os gregos proclamavam:
+                “Conhece-te a
+                ti mesmo e conhecerás a Deus”.
+
+
+                <br><br>
+                Gosto do gnosticismo principalmente por sua ênfase no potencial humano, isso tem
+                um efeito motivador ao mesmo tempo que nos adverte de nossa responsabilidade e das
+                consequências da preguiça ou indiferença quanto a conhecer a vida, que é a única
+                maneira de realmente aproveitá-la.
+                Ser um
+                <div class="tooltip">
+                    <h3>filósofo</h3>
+                    <span class="tooltip6">Pessoa que analisa a realidade na qual está inserida,
+                        e desenvolve uma reflexão buscando entender a natureza, a condição das pessoas,
+                        e a maneira de pensar a vida.
+                    </span>
+                </div>
+                é exatamente o coração do gnosticismo: ser um amante da sabedoria.
+            </div>
+        </div>
+        <div id="quadro5">
             A inscrição abaixo foi encontrada no Templo de Delphos na Grécia antiga, foi datada
             por volta de 600aC, e é atribuída a <strong>Tales de Mileto</strong>, um dos mais antigos filósofos
             que se tem conhecimento, e que era também matemático e astrônomo.<br><br>
-            <img src="\imagens\talesdemileto.png">
+            <img id="imgQ5" src="\imagens\talesdemileto.png">
         </div>
 
         <table id="opcoes">
             <tr>
-                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\ateismo.png"></a>
                 </td>
                 <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\deismo.png"></a></td>
                 <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\gnosticismo.png"></a></td>
                 <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next"><img class="opcao"
