Correções e ajustes - gnosticismo

--- a/gnosticismo.html
+++ b/gnosticismo.html
@@ -25,29 +25,29 @@
                     <span class="tooltip1">É uma forma de religião com um corpo de
                         conhecimento secreto. Nela, há um conjunto central de crenças e
                         práticas de natureza religiosa com seus segredos, que são
-                        reveladas apenas aos iniciados.
+                        revelados apenas aos iniciados.
                     </span>
                 </div>
-                antiquíssimas.
-                Para um gnóstico, a única forma de se chegar a verdade universal é
-                pelo conhecimento, referindo-se ao conhecimento humano como um todo,
-                que se encontra dentro de nós. Ainda que esteja, porém, em estado
+                antiquíssimas. Para um gnóstico, a única forma de se chegar a verdade
+                universal é pelo conhecimento. É base do ensinamento gnóstico que tal
+                conhecimento, como um todo, se encontra dentro de nós, ainda que esteja,
+                porém, em estado
                 <div class="tooltip">
-                    <h3>embrionário</h3>
+                    <h3>embrionário</h3>.
                     <span class="tooltip2">Em sentido figurado diz respeito àquilo que
                         ainda não se encontra completamente desenvolvido; que ainda não
                         nasceu na esfera física existindo apenas no campo das ideias.
-                    </span>,
+                    </span>
                 </div>
-                bastando apenas preparar-se para trazê-lo à tona.
+                Basta apenas preparar-se para trazê-lo à tona.
             </div>
         </div>
         <div id="quadro2">
             <img id="imgQ2" src="\imagens\carl-jung.png">
-            <div id="caixa-quadro2">
+            <div id="caixa-quadro2A">
                 <div class="tooltip">
                     <h3>Carl Gustav Jung</h3>,
-                    <span class="tooltip4">Foi um psiquiatra e psicoterapeuta suíço que
+                    <span class="tooltip3">(1875-1961) Foi um psiquiatra e psicoterapeuta suíço que
                         fundou a psicologia analítica. Ele criou alguns dos mais
                         conhecidos conceitos psicológicos, incluindo o arquétipo, o
                         inconsciente coletivo, o complexo, e a sincronicidade.
@@ -57,79 +57,93 @@
                 do ser humano estão os próprios
                 <div class="tooltip">
                     <h3>arquétipos</h3>
-                    <span class="tooltip5">Modelo pelo qual se faz uma obra material ou
+                    <span class="tooltip4">Modelo pelo qual se faz uma obra material ou
                         intelectual. Para o platonismo, as ideias são os projetos das
                         coisas, certas ideias são os arquétipos de outras ideias.
                     </span>
                 </div>
                 da criação, ou seja, as fórmulas ou princípios que estão na raiz de
-                todas as coisas. Ele usou o gnosticismo como uma fonte de inspiração
-                para suas próprias ideias sobre psicologia e espiritualidade. Ele
-                acreditava que os mitos e símbolos gnósticos podiam enriquecer nossa
-                compreensão do inconsciente e dos processos individuais do
-                desenvolvimento psicológico. O gnosticismo, com Jung, passou a ser
-                um assunto que interessava, não apenas à história da religião, mas
-                também à psicologia. Jung pagou caro por essas opiniões a respeito do
-                gnosticismo. Até hoje existe quem carimbe o trabalho de Jung de “não
-                científico” em razão das suas opiniões a respeito dessa matéria, pois
-                segundo os cristãos ortodoxos, o gnosticismo não era coisa séria. 
+                todas as coisas.
+            </div>
+            <div id="caixa-quadro2B">
+                Ele usou o gnosticismo como uma fonte de inspiração para suas próprias
+                ideias sobre psicologia e espiritualidade, pois acreditava que os mitos
+                e símbolos gnósticos podiam enriquecer nossa compreensão do inconsciente
+                e dos processos individuais do desenvolvimento psicológico. Jung pagou
+                caro por essas opiniões a respeito do gnosticismo. Até hoje existe quem
+                carimbe o trabalho de Jung de “não científico” em razão das suas opiniões
+                a respeito dessa matéria.
             </div>
         </div>
         <div id="quadro3">
             <div id="caixa-quadro3A">
                 <div class="tooltip">
                     <h3>Ralph Waldo Emerson</h3>,
-                    <span class="tooltip4">(1803 - 1882) foi um famoso escritor, filósofo
+                    <span class="tooltip5">(1803-1882) Foi um famoso escritor, filósofo
                         e poeta norte-americano, que desenvolveu uma filosofia
                         "transcendentalista", que consistia num método para se chegar ao
                         "eu" profundo, o espírito universal comum a toda a espécie humana.
                     </span>
                 </div>
-                explorou extensivamente o tema da sabedoria interior e
-                da conexão entre o indivíduo e o universo em seus ensaios e discursos.
-                Ele acreditava que cada pessoa possui uma fonte de sabedoria interna e que
-                essa sabedoria pode ser acessada por meio da introspecção, da autoconfiança
-                e da conexão com a natureza. Aqui está uma de suas citações e ideias
-                relacionadas ao tema:
+                explorou extensivamente o tema da sabedoria interior e da conexão entre
+                o indivíduo e o universo em seus ensaios e discursos. Ele acreditava que
+                cada pessoa possui uma fonte de sabedoria interna e que essa sabedoria
+                pode ser acessada por meio da introspecção, da autoconfiança e da conexão
+                com a natureza. Aqui está uma de suas citações e ideias relacionadas ao
+                tema:
             </div>
             <div id="caixa-quadro3B">
                 "A sabedoria brota da compreensão de que o universo é uma extensão de
                 si mesmo e que, ao compreender a si mesmo, você compreende o universo."
             </div>
             <div id="caixa-quadro3C">
-                Essas citações refletem a ênfase de Emerson na importância da autoconfiança,
-                da intuição e da compreensão do eu como um caminho para acessar a sabedoria
-                universal. Ele encorajava as pessoas a olharem para dentro de si mesmas em
-                busca de orientação e significado, e acreditava que essa busca levaria a
-                uma compreensão mais profunda do mundo ao nosso redor.
+                As citações de Emerson enfatizam a importância da autoconfiança, da
+                intuição e da compreensão do eu como um caminho para acessar a sabedoria
+                universal. Seus escritos encorajavam as pessoas a olharem para dentro de
+                si mesmas em busca de orientação e significado. Emerson acreditava que
+                essa busca levaria a uma compreensão mais profunda do mundo ao nosso redor.
             </div>
             <img id="imgQ3" src="\imagens\ralph-waldo-emerson.png">
         </div>
         <div id="quadro4">
             <div id="caixa-quadro4">
-                Para o gnóstico não há questão proibida, tema tabu ou dogma, menos ainda a verdade revelada através
-                de
-                profetas ou oráculos. Assim, uma característica da gnose religiosa é a eliminação do intermediário
-                autorizado (padre, ministro, pastor…) e a tentativa da experiência direta e, portanto, mística, de
-                Deus.
-                O pressuposto é o da imanência de Deus, habitando na alma humana, sendo dela o mais importante
-                parceiro.
-                Na verdade o gnóstico já não é mais o buscador, aquele que está à procura das respostas: Ele já tem
-                as
-                respostas. Cristo disse: “Conhecei a verdade e Ela vos libertará!” Os gregos proclamavam:
-                “Conhece-te a
-                ti mesmo e conhecerás a Deus”.
-
-
-                <br><br>
-                Gosto do gnosticismo principalmente por sua ênfase no potencial humano, isso tem
-                um efeito motivador ao mesmo tempo que nos adverte de nossa responsabilidade e das
-                consequências da preguiça ou indiferença quanto a conhecer a vida, que é a única
-                maneira de realmente aproveitá-la.
+                O gnosticismo ensina que a verdade não é revelada através de profetas ou
+                <div class="tooltip">
+                    <h3>oráculos</h3>.
+                    <span class="tooltip6">
+                        Instrumento que serve como intermediário entre a divindade e as
+                        pessoas, e que é usado para obter orientação, previsões ou
+                        respostas a perguntas através de uma fonte sobrenatural ou divina.
+                    </span>
+                </div>
+                Assim, uma de suas principais característica é a eliminação do
+                intermediário autorizado, ou seja, padre, ministro, pastor… A ideia
+                central do gnosticismo é que cada pessoa pode ter uma experiência
+                pessoal e direta com Deus, já que, para um gnóstico, Deus está dentro
+                de cada um de nós. Então, não se trata apenas de sair por aí buscando
+                respostas, pois elas já estão dentro de cada ser vivo. Tal ideia está
+                presente em muitas
+                <div class="tooltip">
+                    <h3>filosofias</h3>
+                    <span class="tooltip7">
+                        Reunião dos conhecimentos ou ideias de uma pessoa, grupo ou
+                        povo. Conjunto das reflexões particulares que buscam entender
+                        a realidade, a partir da razão.
+                    </span>
+                </div>
+                ao redor do mundo, e em todas as épocas, desde as mais antigas.
+                Por exemplo: os gregos proclamavam:
+                <p>“Conhece-te a ti mesmo e conhecerás a Deus”.</p>
+                E até no próprio cristianismo, Cristo disse:
+                <p>“Conhecei a verdade e Ela vos libertará!”</p>
+                E é isto o que tanto me atrai no gnosticismo, sua ênfase no potencial
+                humano! Isso tem um efeito motivador e ao mesmo tempo nos adverte de
+                nossa responsabilidade. Sim, as consequências da preguiça ou indiferença
+                quanto a conhecer a vida, que é a única maneira de realmente aproveitá-la.
                 Ser um
                 <div class="tooltip">
                     <h3>filósofo</h3>
-                    <span class="tooltip6">Pessoa que analisa a realidade na qual está inserida,
+                    <span class="tooltip8">Pessoa que analisa a realidade na qual está inserida,
                         e desenvolve uma reflexão buscando entender a natureza, a condição das pessoas,
                         e a maneira de pensar a vida.
                     </span>
@@ -140,7 +154,7 @@
         <div id="quadro5">
             A inscrição abaixo foi encontrada no Templo de Delphos na Grécia antiga, foi datada
             por volta de 600aC, e é atribuída a <strong>Tales de Mileto</strong>, um dos mais antigos filósofos
-            que se tem conhecimento, e que era também matemático e astrônomo.<br><br>
+            que se tem conhecimento, e que era também matemático e astrônomo.<br> 
             <img id="imgQ5" src="\imagens\talesdemileto.png">
         </div>
 
