--- a/teismo.html
+++ b/teismo.html
@@ -15,6 +15,7 @@
             <img id="perfil" src="\imagens\perfil-fred.jpg">
             <div id="texto-perfil">
                 <h4>TEÍSMO (TEÍSTA)</h4>
+                <hr>
                 É considerado teísta, uma pessoa que crê na existência de um ou mais deuses.
                 Não necessariamente um Deus com letra maiúscula, já que alguns teístas não
                 creem num Deus pessoal, onipotente, onisciente e onipresente, mas apenas em
@@ -24,23 +25,22 @@
                 HENOTEÍSMO: crença na existência de muitos deuses, mas com um deles superior aos demais.
             </div>
         </div>
-        <div id="quadro2">Sempre acreditei em Deus, pois assim fui ensinado desde muito pequeno.
-            Cresci em um ambiente onde foi me apresentado, não apenas um Deus criador,
-            mas também um Deus que se importa com suas criaturas, e que quer ter
-            com elas um relacionamento de pai e filho. Para uma criança é fácil
-            acreditar em seus pais e professores aceitando tudo como verdade,
-            como se estivesse engolindo algo inteiro sem digerir. Também é fácil
-            falar sobre coisas que se memorizou e repeti-las como um papagaio.
-            Agora na escola, estudando essa matéria, comecei a me questionar e
-            percebi que não tinha muita certeza de nada, porque nunca havia parado para pensar a fundo.
-            Fui checado ao ser questionado sobre provas de minhas afirmações.
-            Se Deus existe mesmo por que as catástrofes? Se Deus se importa com a humanidade,
-            por que tanto sofrimento? Por que você crê num livro que já está provado não
-            ser digno de confiança? E depois de muitas dúvidas e idas e vindas de meu
-            pensamento, hoje posso dizer que sou um teísta ou melhor, monoteísta, porque,
-            assim como <strong>Isaque Newton</strong>, que foi um dos mais influentes
-            físicos e matemáticos de todos os tempos, ao contemplar a natureza,
-            só posso concluir que esta é a opção mais racional.
+        <div id="quadro2">Sempre acreditei em Deus, pois assim fui ensinado desde muito
+            pequeno. Cresci em um ambiente onde foi me apresentado, não apenas um Deus
+            criador, mas também um Deus que se importa com suas criaturas, e que quer ter
+            com elas um relacionamento de pai e filho. Para uma criança é fácil acreditar
+            em seus pais e professores aceitando tudo como verdade, como se estivesse
+            engolindo algo inteiro sem digerir. Também é fácil falar sobre coisas que se
+            memorizou e repeti-las como um papagaio. Agora na escola, estudando essa matéria,
+            comecei a me questionar e percebi que não tinha muita certeza de nada, porque
+            nunca havia parado para pensar a fundo. Fui checado ao ser questionado sobre
+            provas de minhas afirmações. Se Deus existe mesmo por que as catástrofes? Se Deus
+            se importa com a humanidade, por que tanto sofrimento? Por que você crê num livro
+            que já está provado não ser digno de confiança? E depois de muitas dúvidas e idas
+            e vindas de meu pensamento, hoje posso dizer que sou um teísta ou melhor,
+            monoteísta, porque, assim como <strong>Isaque Newton</strong>, que foi um dos
+            mais influentes físicos e matemáticos de todos os tempos, ao contemplar a
+            natureza, só posso concluir que esta é a opção mais racional.
         </div>
         <img src="\imagens\isaquenewton.png">
         <div id="quadro3"> Se um homem tão inteligente e estudioso quanto ele chegou a essa
