Ajustes e correções - teísmo

--- a/teismo.html
+++ b/teismo.html
@@ -16,48 +16,98 @@
             <div id="texto-perfil">
                 <h4>TEÍSMO (TEÍSTA)</h4>
                 <hr>
-                É considerado teísta, uma pessoa que crê na existência de um ou mais deuses.
-                Não necessariamente um Deus com letra maiúscula, já que alguns teístas não
-                creem num Deus pessoal, onipotente, onisciente e onipresente, mas apenas em
-                um "ser superior". Algumas subdivisões do teísmo são:
-                MONOTEÍSMO: crença em apenas um deus.
-                POLITEÍSMO: crença na existência de mais de um deus.
-                HENOTEÍSMO: crença na existência de muitos deuses, mas com um deles superior aos demais.
+                É considerado teísta, uma pessoa que crê na existência de um ou mais
+                deuses, ou seres imateriais. Como se vê, não é, necessariamente, alguém
+                que acredita em um Deus com letra maiúscula, já que alguns teístas não
+                creem num Deus pessoal, onipotente, onisciente e onipresente, mas apenas
+                em um "ser superior". De cara, já dá para perceber que o teísmo abrange
+                uma variedade de sistemas de crenças religiosas, incluindo o cristianismo,
+                o islamismo, o judaísmo, o hinduísmo, o budismo (em algumas formas), e
+                mesmo inúmeras crenças milenares, como os deuses sumérios, os gregos, os
+                egípcios, dentre tantas outras crenças.
             </div>
         </div>
-        <div id="quadro2">Sempre acreditei em Deus, pois assim fui ensinado desde muito
-            pequeno. Cresci em um ambiente onde foi me apresentado, não apenas um Deus
-            criador, mas também um Deus que se importa com suas criaturas, e que quer ter
-            com elas um relacionamento de pai e filho. Para uma criança é fácil acreditar
-            em seus pais e professores aceitando tudo como verdade, como se estivesse
-            engolindo algo inteiro sem digerir. Também é fácil falar sobre coisas que se
-            memorizou e repeti-las como um papagaio. Agora na escola, estudando essa matéria,
-            comecei a me questionar e percebi que não tinha muita certeza de nada, porque
-            nunca havia parado para pensar a fundo. Fui checado ao ser questionado sobre
-            provas de minhas afirmações. Se Deus existe mesmo por que as catástrofes? Se Deus
-            se importa com a humanidade, por que tanto sofrimento? Por que você crê num livro
-            que já está provado não ser digno de confiança? E depois de muitas dúvidas e idas
-            e vindas de meu pensamento, hoje posso dizer que sou um teísta ou melhor,
-            monoteísta, porque, assim como <strong>Isaque Newton</strong>, que foi um dos
-            mais influentes físicos e matemáticos de todos os tempos, ao contemplar a
-            natureza, só posso concluir que esta é a opção mais racional.
+        <div id="quadro2">
+            <div id="caixa-quadro2">
+                Diante de tantas
+                <div class="tooltip">
+                    <h3>vertentes</h3>
+                    <span class="tooltip1">Subdivisões que partem de um tronco
+                        formando diversos pontos de vista, ou linhas de pensamentos
+                        decorrentes.
+                    </span>
+                </div>,
+                seria didático apresentar algumas subdivisões do teísmo:<br>
+                MONOTEÍSMO: crença em apenas um deus (exemplos: cristianismo, islamismo).<br>
+                POLITEÍSMO: crença na existência de mais de um deus (exemplo: os deuses
+                egípcios).<br>
+                HENOTEÍSMO: crença na existência de muitos deuses, mas com um deles
+                superior aos demais (exemplo: os deuses gregos).
+            </div>
+            <img id="imgQ2" src="\imagens\deuses.png">
         </div>
-        <img src="\imagens\isaquenewton.png">
-        <div id="quadro3"> Se um homem tão inteligente e estudioso quanto ele chegou a essa
-            conclusão, e tantos outros antes e depois dele, também, isso é para mim, um
-            incentivo, para que, coisas tão difíceis de entender, não me desmotive
-            a procurar entender de onde eu vim, por que estou aqui, e para onde vou.
+        <div id="quadro3">
+            <div id="caixa-quadro3">
+                Sempre acreditei em Deus, pois assim fui ensinado desde muito pequeno.
+                Cresci em um ambiente onde me foi apresentado, não apenas um Deus criador,
+                mas também um Deus que se importa com suas criaturas, e que quer ter com
+                elas um relacionamento, como de pai e filho. Para uma criança é fácil
+                acreditar em seus pais e professores, aceitando tudo que lhe é passado,
+                como verdade, como se estivesse engolindo algo inteiro, sem mastigar.
+                Também é fácil falar sobre coisas que se memorizou e repeti-las como um
+                papagaio. Agora, na escola, estudando essa matéria, comecei a me questionar,
+                e percebi que não tinha muita certeza de nada, porque nunca havia parado
+                para pensar a fundo, em toda informação que me passavam. Fui checado ao
+                ser questionado sobre provas de minhas afirmações.
+            </div>
+            <img id="imgQ3" src="\imagens\perguntas.png">
+        </div>
+        <div id="quadro4">
+            <div id="caixa-quadro4">
+                <strong>Isaque Newton</strong>, foi um dos mais influentes físicos e
+                matemáticos, e também, foi considerado, um dos mais importantes
+                pesquisadores de todos os tempos, por causa de suas descobertas
+                científicas. Para ele, o estudo e contemplação da natureza demonstravam
+                a existência de Deus.
+        </div>
+        <img id="imgQ4" src="\imagens\isaquenewton.png">
+        </div>
+        <div id="quadro5">
+            Quanto mais Isaque Newtom se aprofundava em suas pesquisas, tanto mais cria em
+            Deus, como criador. Sua crença, não era fruto exclusivamente da fé, mas era
+            também embasada naquilo que observava na natureza, suas pesquisas apenas
+            <div class="tooltip">
+                <h3>corroboravam</h3>
+                <span class="tooltip2">Corroborar : confirmar uma verdade; dar provas de;
+                    comprovar; dados que fortalecem suposições de um estudo.
+                </span>
+            </div>
+            aquilo que cria. Muitas afirmações da Bíblia foram estudadas e explicadas por
+            Newton. Ao considerarmos que um homem tão excepcionalmente inteligente como Newton
+            chegou a essa conclusão, e que muitos outros antes e depois dele também
+            compartilharam essa convicção, isso nos inspira. Isso nos encoraja a não nos
+            deixarmos desanimar por conceitos que possam parecer além de nossa compreensão
+            atual. Em vez disso, nos impulsiona a buscar o entendimento das questões mais
+            fundamentais da vida: de onde viemos, qual é nosso propósito aqui e para onde
+            estamos indo.
+            Hoje, posso afirmar com convicção que sou um teísta, ou mais especificamente,
+            um monoteísta. Assim como Isaque Newton, ao contemplar a maravilha da natureza,
+            só posso chegar à conclusão de que a crença em um Deus único e supremo é a
+            escolha mais racional.
         </div>
         <table id="opcoes">
             <tr>
-                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\teismo.png"></a></td>
-                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\ateismo.png"></a>
+                <td><a href="teismo.html" id="teismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\teismo.png"></a></td>
+                <td><a href="ateismo.html" id="ateismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\ateismo.png"></a>
                 </td>
                 <td><a href="panteismo.html" id="panteismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\panteismo.png"></a></td>
             </tr>
             <tr>
-                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao" src="\imagens\deismo.png"></a></td>
+                <td><a href="deismo.html" id="deismo" class="opcao-link" rel="next"><img class="opcao"
+                            src="\imagens\deismo.png"></a></td>
                 <td><a href="gnosticismo.html" id="gnosticismo" class="opcao-link" rel="next"><img class="opcao"
                             src="\imagens\gnosticismo.png"></a></td>
                 <td><a href="agnosticismo.html" id="agnosticismo" class="opcao-link" rel="next"><img class="opcao"
